--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +15,7 @@
         android:icon="@mipmap/app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_logo_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.DailyConsumptionFormApp">
+        android:supportsRtl="true">
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -24,22 +27,31 @@
                 android:resource="@xml/file_paths"/>
         </provider>
 
+        <activity android:name=".WebViewActivity"
+            android:theme="@style/Theme.SummaryActivity.NoActionBar"
+            android:exported="false"/>
+
+        <activity android:name=".EditActivity"
+            android:theme="@style/Theme.SummaryActivity.NoActionBar"
+            android:exported="false"/>
+
         <activity
             android:name=".SummaryActivity"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar"
+            android:theme="@style/Theme.SummaryActivity.NoActionBar"
             android:exported="false" />
-
+        <activity
+            android:name=".CompiledSummaryActivity"
+            android:theme="@style/Theme.SummaryActivity.NoActionBar"
+            android:exported="false" />
         <activity
             android:name=".FormActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:theme="@style/Theme.FormActivity.NoActionBar"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 </manifest>
