--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:maxSdkVersion="32" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/app_logo"
@@ -31,7 +31,7 @@
             android:theme="@style/Theme.SummaryActivity.NoActionBar"
             android:exported="false"/>
 
-        <activity android:name=".EditActivity"
+        <activity android:name=".MyUploadActivity"
             android:theme="@style/Theme.SummaryActivity.NoActionBar"
             android:exported="false"/>
 
