--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:exported="false" />
         <activity
             android:name=".FormActivity"
-            android:theme="@style/Theme.FormActivity.NoActionBar"
+            android:theme="@style/Theme.App.SplashScreen"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
